--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="container">
         <nav class="header__menu">
             <ul>
-                <li><a href="#">Delivery</a></li>
-                <li><a href="#">Payment</a></li>
+                <li id="link"><a href="#" id="row">Delivery</a></li>
+                <li><a href="#" id="#">Payment</a></li>
                 <li><a href="#">Reviews</a></li>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Contacts</a></li>
@@ -20,5 +20,76 @@
         </nav>
     </div>
 </header>
+<main>
+    <section class="org">
+        <div class="container">
+            <div class="org__content">
+                <div class="org__info">
+                    <div class="services__minor-service"><img src="./assets/Group 2.png" alt=""></div>
+                </div>
+                <div class="org__video">
+                    <p>1 (213) 123-45-67</p>
+                    <div>
+                        <button type="submit">Call back</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="salon">
+        <div class="container">
+            <nav class="salon__menu">
+                <ul>
+                    <li><a href="#">Salon</a></li>
+                    <li><a href="#">Barbershop</a></li>
+                    <li><a href="#">Manicure</a></li>
+                    <li><a href="#">Pedicure</a></li>
+                    <li><a href="#">Message</a></li>
+                    <li><a href="#">Furniture</a></li>
+                </ul>
+            </nav>
+        </div>
+    </section>
+    <section class="super__chair" style="background-image: url('./assets/Rectangle 2.png')">
+        <div class="container">
+            <div class="super__chair__info">
+                  <div class="super__chair__content">
+                    <h1>Super chair</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Cum, totam. Lorem
+                    </p>
+                    <div>
+                        <button type="submit">More</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="offers">
+        <div class="container">
+            <div class="offers__info">
+                <div class="offers__special">
+                    <h1>Special offers</h1>
+                </div>
+                <div class="team__member">
+                    <span class="future__team"
+                          style="background-image: url('./assets/Rectangle 4.png')">
+                    </span>
+                    <span class="future__team"
+                          style="background-image: url('./assets/Rectangle 4.png')">
+                    </span>
+                    <span class="future__team"
+                          style="background-image: url('./assets/Rectangle 4.png')">
+                    </span>
+                    <span class="future__team"
+                          style="background-image: url('./assets/Rectangle 4.png')">
+                    </span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+</main>
 </body>
+<script src="js/script.js"></script>
 </html>
