--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <header class="header">
-    <div class="container">
         <nav class="header__menu">
+            <div class="container">
             <ul>
                 <li id="link"><a href="#" id="row">Delivery</a></li>
                 <li><a href="#" id="#">Payment</a></li>
@@ -17,11 +17,9 @@
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Contacts</a></li>
             </ul>
+            </div>
         </nav>
-    </div>
-</header>
-<main>
-    <section class="org">
+    <div class="org">
         <div class="container">
             <div class="org__content">
                 <div class="org__info">
@@ -29,16 +27,13 @@
                 </div>
                 <div class="org__video">
                     <p>1 (213) 123-45-67</p>
-                    <div>
-                        <button type="submit">Call back</button>
-                    </div>
+                    <button type="submit">Call back</button>
                 </div>
             </div>
         </div>
-    </section>
-    <section class="salon">
-        <div class="container">
+    </div>
             <nav class="salon__menu">
+                <div class="container">
                 <ul>
                     <li><a href="#">Salon</a></li>
                     <li><a href="#">Barbershop</a></li>
@@ -47,43 +42,136 @@
                     <li><a href="#">Message</a></li>
                     <li><a href="#">Furniture</a></li>
                 </ul>
+                </div>
             </nav>
-        </div>
-    </section>
+</header>
+<main>
     <section class="super__chair" style="background-image: url('./assets/Rectangle 2.png')">
         <div class="container">
-            <div class="super__chair__info">
-                  <div class="super__chair__content">
-                    <h1>Super chair</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Cum, totam. Lorem
-                    </p>
-                    <div>
-                        <button type="submit">More</button>
-                    </div>
+            <div class="super__chair__content">
+                <h1>Super chair</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Cum, totam. Lorem
+                </p>
+                <div>
+                    <button type="submit">More</button>
                 </div>
             </div>
         </div>
     </section>
     <section class="offers">
-        <div class="container">
-            <div class="offers__info">
-                <div class="offers__special">
+        <div class="special__offers">
+            <div class="container">
+                <div class="offers__info">
                     <h1>Special offers</h1>
+                    <div class="team__member">
+                        <div class="catalog__item">
+                            <img src="assets/chair2.png" alt="chair">
+                            <p> Hairdressing chair "Norm" hydraulic</p>
+                            <p>$ 300</p>
+                            <button class="catalog__btn-special" href="#">Buy</button>
+                        </div>
+                        <div class="catalog__item">
+                            <img src="assets/chair2.png" alt="chair">
+                            <p> Hairdressing chair "Norm" hydraulic</p>
+                            <p>$ 300</p>
+                            <button class="catalog__btn-special" href="#">Buy</button>
+                        </div>
+                        <div class="catalog__item">
+                            <img src="assets/chair2.png" alt="chair">
+                            <p> Hairdressing chair "Norm" hydraulic</p>
+                            <p>$ 300</p>
+                            <button class="catalog__btn-special" href="#">Buy</button>
+                        </div>
+                        <div class="catalog__item">
+                            <img src="assets/chair2.png" alt="chair">
+                            <p> Hairdressing chair "Norm" hydraulic</p>
+                            <p>$ 300</p>
+                            <button class="catalog__btn-special" href="#">Buy</button>
+                        </div>
+                    </div>
                 </div>
-                <div class="team__member">
-                    <span class="future__team"
-                          style="background-image: url('./assets/Rectangle 4.png')">
-                    </span>
-                    <span class="future__team"
-                          style="background-image: url('./assets/Rectangle 4.png')">
-                    </span>
-                    <span class="future__team"
-                          style="background-image: url('./assets/Rectangle 4.png')">
-                    </span>
-                    <span class="future__team"
-                          style="background-image: url('./assets/Rectangle 4.png')">
-                    </span>
+            </div>
+        </div>
+        <div class="bonuses">
+            <div class="container">
+                <div class="bonuses__info">
+                    <div class="get__bonuses" style="background-image: url('./assets/Rectangle 5.png')">
+                        <div class="bonuses__inter__text">
+                            <h2>Get bonuses and gifts</h2>
+                            <p>Every month we play
+                                $1000 for our clients</p>
+                            <form id="form_id"></form>
+                            <input type="email" placeholder="Enter your e-mail" form="form_id">
+                        </div>
+                        <div class="card__inter__img">
+                            <img src="assets/envelope.png" alt="envelope">
+                        </div>
+                    </div>
+                    <div class="get__visit" style="background-image: url('./assets/Rectangle 5.png')">
+                        <div class="bonuses__log__text">
+                            <h2>Visit us</h2>
+                            <p>Over 300 stores
+                                throughout the USA</p>
+                            <div class="card__btn">
+                                <button class="card__btn-store" href="#">Store map</button>
+                            </div>
+                        </div>
+                        <div class="card__log__img">
+                            <img src="assets/track.png" alt="truck">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="impls">
+            <div class="container">
+        <div class="impls__gallary">
+            <div class="impl__gallary__img"><img src="assets/image.png" alt="envelope"></div>
+            <div class="impl__gallary__img"><img src="assets/image.png" alt="envelope"></div>
+            <div class="impl__gallary__img"><img src="assets/image.png" alt="envelope"></div>
+            <div class="impl__gallary__img"><img src="assets/image.png" alt="envelope"></div>
+            <div class="impl__gallary__img"><img src="assets/image.png" alt="envelope"></div>
+            <div class="impl__gallary__img"><img src="assets/image.png" alt="envelope"></div>
+            <div class="impl__gallary__img"><img src="assets/image.png" alt="envelope"></div>
+            <div class="impl__gallary__img"><img src="assets/image.png" alt="envelope"></div>
+            <div class="impl__gallary__img"><img src="assets/image.png" alt="envelope"></div>
+            <div class="impl__gallary__img"><img src="assets/image.png" alt="envelope"></div>
+            <div class="impl__gallary__img"><img src="assets/image.png" alt="envelope"></div>
+            <div class="impl__gallary__img"><img src="assets/image.png" alt="envelope"></div>
+        </div>
+            </div>
+        </div>
+        <div class="recently">
+            <div class="container">
+                <div class="offers__info">
+                    <h1>Have you recently wiewed</h1>
+                    <div class="team__member">
+                        <div class="catalog__item">
+                            <img src="assets/chair2.png" alt="chair">
+                            <p> Hairdressing chair "Norm" hydraulic</p>
+                            <p>$ 300</p>
+                            <button class="catalog__btn-special" href="#">Buy</button>
+                        </div>
+                        <div class="catalog__item">
+                            <img src="assets/chair2.png" alt="chair">
+                            <p> Hairdressing chair "Norm" hydraulic</p>
+                            <p>$ 300</p>
+                            <button class="catalog__btn-special" href="#">Buy</button>
+                        </div>
+                        <div class="catalog__item">
+                            <img src="assets/chair2.png" alt="chair">
+                            <p> Hairdressing chair "Norm" hydraulic</p>
+                            <p>$ 300</p>
+                            <button class="catalog__btn-special" href="#">Buy</button>
+                        </div>
+                        <div class="catalog__item">
+                            <img src="assets/chair2.png" alt="chair">
+                            <p> Hairdressing chair "Norm" hydraulic</p>
+                            <p>$ 300</p>
+                            <button class="catalog__btn-special" href="#">Buy</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
