--- a/index.html
+++ b/index.html
@@ -101,8 +101,11 @@
                             <h2>Get bonuses and gifts</h2>
                             <p>Every month we play
                                 $1000 for our clients</p>
-                            <form id="form_id"></form>
-                            <input type="email" placeholder="Enter your e-mail" form="form_id">
+                            <form id="form_id">
+                            <label>
+                                <input type="email" placeholder="Enter your e-mail" form="form_id">
+                            </label>
+                            </form>
                         </div>
                         <div class="card__inter__img">
                             <img src="assets/envelope.png" alt="envelope">
